set explicit dev dependencies

--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
         "cjs-emitter": "cjssdk/emitter"
     },
     "devDependencies": {
-        "cjs-eslint-config": "cjssdk/eslint-config"
+        "cjs-eslint-config": "cjssdk/eslint-config",
+        "mocha": "2.*.*",
+        "should": "8.*.*"
     },
     "keywords": [
         "commonjs",
