switch to the global npm version of cjs-emitter

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     },
     "dependencies": {
         "cjs-async": "1.*.*",
-        "cjs-emitter": "cjssdk/emitter"
+        "cjs-emitter": "1.*.*"
     },
     "devDependencies": {
         "cjs-eslint-config": "1.*.*",
